<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/txt_codigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:hint="@string/txtcodigo"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/txt_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="50dp"
        android:hint="Descripcion"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txt_precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="50dp"
        android:hint="@string/txtprecio"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="60dp"
        android:onClick="Registrar"
        android:text="@string/btnRegistrar" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="60dp"
        android:text="@string/btnBuscar" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="60dp"
        android:text="@string/btnEliminar" />


    <Button
        android:id="@+id/btnModificar"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="370dp"
        android:layout_marginLeft="60dp"
        android:text="@string/btnModificar" />
</RelativeLayout>